[refactor]:{modify name & code comment.}

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,25 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent">
 
+  <EditText
+    android:id="@+id/edit_url"
+    android:hint="input url like rtmp://192......."
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+
   <Button
     android:id="@+id/connect"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
+    android:layout_below="@+id/edit_url"
     android:text="connect" />
 
   <Button
     android:id="@+id/start"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
+    android:layout_below="@+id/edit_url"
     android:layout_toRightOf="@+id/connect"
     android:enabled="false"
     android:text="start" />
@@ -24,7 +30,7 @@
     android:id="@+id/stop"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
+    android:layout_below="@+id/edit_url"
     android:layout_toRightOf="@+id/start"
     android:enabled="false"
     android:text="stop" />
