--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,8 @@
 
   <SurfaceView
     android:id="@+id/surfaceView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentRight="true"
+    android:layout_width="1px"
+    android:layout_height="1px"
     android:layout_below="@+id/start" />
 
 
